<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="40dp">

        <!--cabeçalho da tabela -->

        <TableRow
            android:background="@color/LightBlue">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/colunaNome"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"

            />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/colunaEndereco"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/colunaTelefone"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/colunaFoto"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"

                />




        </TableRow>


        <!--- dados da tabela -->
        <TableRow
            android:background="@color/LightGrey">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Nome"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Endereco"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Telefone"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Foto"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"


                />

        </TableRow>

        <!--- dados da tabela -->
        <TableRow
            android:background="@color/LightGrey">

            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Nome"
                android:textColor="@android:color/black"
                android:textSize="12sp"

                />

            <TextView
                android:layout_width="24dp"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Endereco"
                android:textColor="@android:color/black"
                android:textSize="12sp"

                />

            <TextView
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Telefone"
                android:textColor="@android:color/black"
                android:textSize="12sp"

                />

            <ImageView
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground" />



        </TableRow>
    </TableLayout>


</RelativeLayout>